--- a/pepeizqs deals web/Pages/last-news.cshtml
+++ b/pepeizqs deals web/Pages/last-news.cshtml
@@ -6,4 +6,6 @@
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.UltimasNoticias>(RenderMode.Server, new { idioma = @Model.idioma }))
+@(await Html.RenderComponentAsync<Componentes.Secciones.UltimasNoticias>(RenderMode.ServerPrerendered, new { 
+	idioma = @Model.idioma 
+}))
